--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,48 @@ body {
 	box-shadow: 0px 6px 0px #f3c985;
 }
 
+.modal__close-btn {
+	position: relative;
+	width: 30px;
+	height: 30px;
+	background-color: transparent;
+	outline: none;
+	border: none;
+	cursor: pointer;
+	margin-left: 30px;
+}
+
+.modal__close-btn:hover .close::after,
+.modal__close-btn:hover .close::before {
+	top: 10px;
+}
+
+.close {
+	width: 100%;
+	height: 100%;
+}
+
+.close::after,
+.close::before {
+	content: '';
+	top: 12px;
+	left: 5px;
+	position: absolute;
+	width: 20px;
+	height: 4px;
+	border-radius: 2px;
+	background-color: #AA7758;
+	transition: all 0.1s ease-in-out;
+}
+
+.close::after {
+	transform: rotate(-45deg);
+}
+
+.close::before {
+	transform: rotate(45deg);
+}
+
 @keyframes rotating {
 	0% {
 		transform: rotate(0deg);
